--- a/src/index.css
+++ b/src/index.css
@@ -1,121 +1,203 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap");
 * {
-  font-family: "Verdana", cursive, sans-serif;
-  color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #141414;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* min-height: 100vh; */
-}
-
-.app {
-  background-color: #252d4a;
-  position: absolute;
-  width: 550px;
-  left: 50%;
-  margin-left: -295px;
-  min-height: 200px;
-  height: min-content;
-  border-radius: 15px;
-  padding: 20px;
-  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.score-section {
-  display: flex;
-  font-size: 24px;
-  align-items: center;
-}
-
-/* QUESTION/TIMER/LEFT SECTION */
-.question-section {
   width: 100%;
-  position: relative;
-}
-
-.question-count {
-  margin-bottom: 20px;
-}
-
-.question-count span {
-  font-size: 28px;
-}
-
-.question-text {
-  margin-bottom: 12px;
-}
-
-.timer-text {
-  background: rgb(230, 153, 12);
-  padding: 15px;
-  margin-top: 20px;
-  margin-right: 20px;
-  border: 5px solid rgb(255, 189, 67);
-  border-radius: 15px;
-  text-align: center;
-}
-
-/* ANSWERS/RIGHT SECTION */
-.answer-section {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-button {
-  width: 100%;
-  font-size: 16px;
+  height: 100%;
+  font-family: roboto, helvetica;
+  font-size: 14px;
+  background-color: #090909;
   color: #ffffff;
-  background-color: #252d4a;
-  border-radius: 15px;
-  display: flex;
-  padding: 5px;
-  justify-content: flex-start;
-  align-items: center;
-  border: 5px solid #234668;
-  cursor: pointer;
 }
 
-.correct {
-  background-color: #2f922f;
-}
-
-.incorrect {
-  background-color: #ff3333;
-}
-
-button:hover {
-  background-color: #555e7d;
-}
-
-button:focus {
-  outline: none;
-}
-
-button svg {
-  margin-right: 5px;
+.quiz {
+  position: absolute;
+  height: 100vh;
+  width: 75%;
+  left: 50%;
+  margin-left: -37.5%;
+  background-color: #090909;
 }
 
 .text {
-  top: 0;
-  width: 800px;
-  font-size: 14px;
+  width: 100%;
 }
-.text h2{
-  color: rgb(224, 118, 19);
+
+.text h1 {
+  margin: 20px 0 10px;
   text-align: center;
+  font-size: 32px;
+  font-family: 'Open Sans';
 }
+
+.text p {
+  margin: 10px 50px;
+  padding: 10px;
+  font-size: 2.2vh;
+}
+
+.quizQuestions {
+  position: absolute;
+  width: 80%;
+  left: 50%;
+  margin-left: calc(-40% - 40px);
+  padding: 20px;
+  bottom: 10%;
+  background-color: #0C0C0C;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.quizQuestions .question {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 5px 0 20px;
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Open Sans';
+  background-color: #131313;
+  width: calc(80% + 10px);
+  height: 50px;
+  line-height: 2.5;
+  border-radius: 10px;
+}
+
+.quizQuestions hr {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: calc(80% + 10px);
+  border-color: #1C1C1C;
+}
+
+.quizQuestions .answers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+  padding-bottom: 15px;
+}
+
+.quizQuestions .answers button {
+  position: relative;
+  margin: 10px;
+  width: 40%;
+  height: 50px;
+  font-size: 18px;
+  color: #ffffff;
+  border-radius: 10px;
+  border: none;
+  background-color: #131313;
+  -webkit-transition: font-size .06s;
+  transition: font-size .06s;
+}
+
+.quizQuestions .answers button:focus {
+  outline: none;
+}
+
+.quizQuestions .answers button:before {
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  left: 0;
+  bottom: 0;
+  border: 3px solid transparent;
+  border-radius: 10px;
+}
+
+.quizQuestions .answers button:after {
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  right: 0;
+  top: 0;
+  border: 3px solid transparent;
+  border-radius: 10px;
+}
+
+.quizQuestions .answers button:hover:before {
+  height: 50px;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  border: 3px solid #DE5ADC;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top: none;
+  border-left: none;
+  -webkit-transition: width .1s linear, height .1s linear .1s;
+  transition: width .1s linear, height .1s linear .1s;
+}
+
+.quizQuestions .answers button:hover:after {
+  height: 50px;
+  width: 100%;
+  right: 0;
+  top: 0;
+  border: 3px solid #DE5ADC;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-right: none;
+  border-bottom: none;
+  -webkit-transition: width .1s linear, height .1s linear .1s;
+  transition: width .1s linear, height .1s linear .1s;
+}
+
+.score {
+  position: absolute;
+  width: 80%;
+  left: 50%;
+  margin-left: calc(-40% - 40px);
+  padding: 20px;
+  bottom: 5%;
+  background-color: #0C0C0C;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.score h2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-bottom: 20px;
+  font-family: 'Open Sans';
+  background-color: #131313;
+  width: 300px;
+  height: 40px;
+  line-height: 2;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.score img {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 45%;
+  height: 45%;
+}
+/*# sourceMappingURL=index.css.map */
