--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
-$main: #090909;
-$main-sub: #0C0C0C;
-$button: #131313;
-
+$main: #deedf1;
+$main-sub: #C6D4D7;
+$button: #AFBBBE;
+$hover: #F56473;
 
 * {
     margin: 0;
@@ -15,7 +15,7 @@ body {
     font-family: roboto, helvetica;
     font-size: 14px;
     background-color: $main;
-    color: #ffffff;
+    color: #000;
 }
 
 
@@ -68,12 +68,13 @@ body {
         height: 50px;
         line-height: 2.5;
         border-radius: 10px;
+        color: #ffffff;
     }
 
     hr {
         align-self: center;
         width: calc(80% + 10px);
-        border-color: #1C1C1C;
+        border-color: $button;
     }
 
     .answers {
@@ -128,7 +129,7 @@ body {
                     width: 100%;
                     left: 0;
                     bottom: 0;
-                    border: 3px solid #DE5ADC;
+                    border: 3px solid $hover;
                     box-sizing: border-box;
                     border-top: none;
                     border-left: none;
@@ -140,7 +141,7 @@ body {
                     width: 100%;
                     right: 0;
                     top: 0;
-                    border: 3px solid #DE5ADC;
+                    border: 3px solid $hover;
                     box-sizing: border-box;
                     border-right: none;
                     border-bottom: none;
