--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
   height: 100%;
   font-family: roboto, helvetica;
   font-size: 14px;
-  background-color: #090909;
-  color: #ffffff;
+  background-color: #deedf1;
+  color: #000;
 }
 
 .quiz {
@@ -19,7 +19,7 @@ body {
   width: 75%;
   left: 50%;
   margin-left: -37.5%;
-  background-color: #090909;
+  background-color: #deedf1;
 }
 
 .text {
@@ -46,7 +46,7 @@ body {
   margin-left: calc(-40% - 40px);
   padding: 20px;
   bottom: 10%;
-  background-color: #0C0C0C;
+  background-color: #C6D4D7;
   border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -65,11 +65,12 @@ body {
   text-align: center;
   font-size: 18px;
   font-family: 'Open Sans';
-  background-color: #131313;
+  background-color: #AFBBBE;
   width: calc(80% + 10px);
   height: 50px;
   line-height: 2.5;
   border-radius: 10px;
+  color: #ffffff;
 }
 
 .quizQuestions hr {
@@ -77,7 +78,7 @@ body {
       -ms-grid-row-align: center;
       align-self: center;
   width: calc(80% + 10px);
-  border-color: #1C1C1C;
+  border-color: #AFBBBE;
 }
 
 .quizQuestions .answers {
@@ -102,7 +103,7 @@ body {
   color: #ffffff;
   border-radius: 10px;
   border: none;
-  background-color: #131313;
+  background-color: #AFBBBE;
   -webkit-transition: font-size .06s;
   transition: font-size .06s;
 }
@@ -138,7 +139,7 @@ body {
   width: 100%;
   left: 0;
   bottom: 0;
-  border: 3px solid #DE5ADC;
+  border: 3px solid #F56473;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-top: none;
@@ -152,7 +153,7 @@ body {
   width: 100%;
   right: 0;
   top: 0;
-  border: 3px solid #DE5ADC;
+  border: 3px solid #F56473;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-right: none;
@@ -168,7 +169,7 @@ body {
   margin-left: calc(-40% - 40px);
   padding: 20px;
   bottom: 5%;
-  background-color: #0C0C0C;
+  background-color: #C6D4D7;
   border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -185,7 +186,7 @@ body {
       align-self: center;
   margin-bottom: 20px;
   font-family: 'Open Sans';
-  background-color: #131313;
+  background-color: #AFBBBE;
   width: 300px;
   height: 40px;
   line-height: 2;
